fixed right-hand whitespace, hr

--- a/css/test-css.css
+++ b/css/test-css.css
@@ -1,19 +1,20 @@
 html, body {
-  margin: 0;
-  padding: 0;
-  position: absolute;
+  margin: 0 !important;
+  padding: 0 !important;
+  position: relative;
   background-color: white;
   font-size: 16pt;
   width: 100% !important;
 }
 
 hr {
-  width: 100%;
-  margin-left: -70px !important;
+
   border: none;
   height: 1px;
   color: #BEBEBE;
   background-color: #BEBEBE;
+  margin-right: 40px;
+  margin-left: -66px;
 }
 
 /****************
@@ -37,7 +38,7 @@ hr {
   font-weight: bold !important;
 	font-family:  'Helvetica' !important;
 	border: none !important;
-  width: 100%;
+  /*width: 100%;*/
 	padding: 13px 50px 13px 13px !important;
 }
 
@@ -90,7 +91,7 @@ hr {
 /* CSS for menu titles */
 .blog-post-title {
   margin-left: 110px;
-  margin-right: -130px;
+  /*margin-right: -130px;*/
   margin-top: -6px;
 
 }
